Describe public APIs